# tiny-app

./: .gitignore  Cargo.toml  LICENSE  template.yml
cli/: Cargo.toml
cli/src/: main.rs
server/: Makefile  samconfig.toml  template.yml
server/src/: main.rs
