[package]
name = "tinycli"
version = "0.1.0"
authors = ["ericcanton <57836255+ericcanton@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2"
reqwest = { version = "0.11", features = ["blocking"] }
error-chain = "0.12"